LE-21 Add support for showing ranked usage of unmapped LOINC parts